# SuperTux-Wii

./: .gitattributes  .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  Wii.in  autogen-clean.sh  autogen.sh  config.h.in  configure.ac  meta.xml
cmake/: WiiToolchain.cmake
cmake/Platform/: NintendoWii.cmake
cmake/toolchains/: Wii.cmake
data/: CREDITS  Makefile.am  extro-bonus.txt  intro.txt  supertux.strf
data/images/tilesets/: supertux.stgt
data/images/worldmap/: antarctica.stwt
data/levels/bonus1/: thompson-level1.stl  torfi-level1.stl  torfi-level2.stl  torfi-level3.stl
data/levels/world1/: level25.stl
data/levels/worldmaps/: world1.stwm
hbc/apps/supertux/: meta.xml
mk/autoconf/: acx_pthread.m4  ax_check_gl.m4  sdl.m4
packaging/wii/: meta.xml
src/: Makefile.am  badguy.cpp  badguy.h  badguy.hpp  button.cpp  button.h  collision.cpp  collision.h  collision.hpp  configfile.cpp  configfile.h  configfile.hpp  defines.h  defines.hpp  gameloop.cpp  gameloop.h  gameloop.hpp  gameobjs.cpp  gameobjs.h  gameobjs.hpp  globals.cpp  globals.h  globals.hpp  high_scores.cpp  high_scores.h  intro.cpp  intro.h  intro.hpp  level.cpp  level.h  level.hpp  leveleditor.cpp  leveleditor.h  lispreader.cpp  lispreader.h  lispreader.hpp  menu.cpp  menu.h  menu.hpp  mousecursor.cpp  (+79 more)
